@@ -36,7 +36,6 @@ libraryDependencies ++= Seq(
   "commons-pool" % "commons-pool" % "1.6",
   "org.scalatest" %% "scalatest" % "2.2.4" % "test",
   "org.scalikejdbc" %% "scalikejdbc" % "2.1.+",
-  "mysql" % "mysql-connector-java" % "5.1.28",
   "com.h2database" % "h2" % "1.4.192",
   "com.github.danielwegener" % "logback-kafka-appender" % "0.0.4"
 )
