@@ -46,8 +46,9 @@ cache.max.size=100000
 
 # DB
 s2graph.models.table.name = "models-dev"
-db.default.driver = "com.mysql.jdbc.Driver"
-db.default.url = "jdbc:mysql://"${host}":3306/graph_dev"
+
+db.default.driver = "org.h2.Driver"
+db.default.url="jdbc:h2:file:./var/metastore;MODE=MYSQL"
 db.default.user = "graph"
 db.default.password = "graph"
 
