@@ -86,7 +86,7 @@ host=localhost
 # DB
 s2graph.models.table.name="models-dev"
 hbase.zookeeper.quorum=${host}
-db.default.url="jdbc:mysql://"${host}":3306/graph_dev"
+
 # Query server
 is.query.server=true
 is.write.server=true
